Updates from ShareLaTeX

--- a/readcube_export.bib
+++ b/readcube_export.bib
@@ -1,16 +1,427 @@
-@article{Chen_Understanding_2009,
-  author={Chen, Yanpei and Griffith, Rean and Liu, Junda and Katz, Randy H and Joseph, Anthony D},
-  file={C:\Users\julia\OneDrive\Documents\ReadCube\2009 - Chen - Understanding TCP Incast Throughput Collapse in Datacenter Networks.pdf},
-  year={2009},
-  title={Understanding {TCP} Incast Throughput Collapse in Datacenter Networks}
+@INPROCEEDINGS{Li_SACC_2016, 
+author={D. Li and Shuyi Li and Zheng Du}, 
+booktitle={2016 IEEE Symposium on Computers and Communication (ISCC)}, 
+title={Session-aware congestion control for TCP Incast in datacenter networks}, 
+year={2016}, 
+volume={}, 
+number={}, 
+pages={1227-1232}, 
+keywords={computer centres;telecommunication congestion control;transport protocols;session-aware congestion control;datacenter networks;TCP incast;network efficiency;transmission session;session completion time;TCP protocol;incast flows;Receivers;Servers;Protocols;Computers;Bandwidth;Optical switches;Packet loss;TCP Incast;congestion control;datacenter;ECN}, 
+doi={10.1109/ISCC.2016.7543904}, 
+ISSN={}, 
+month={June},}
+
+@INPROCEEDINGS{Huang_MTUVarV1_2015, 
+author={J. Huang and Y. Huang and J. Wang and T. He}, 
+booktitle={2015 IEEE 23rd International Conference on Network Protocols (ICNP)}, 
+title={Packet Slicing for Highly Concurrent TCPs in Data Center Networks with COTS Switches}, 
+year={2015}, 
+volume={}, 
+number={}, 
+pages={22-31}, 
+keywords={IP networks;local area networks;program slicing;transport protocols;packet slicing;data center networks;COTS switches;TCP connections;TCP Incast problem;shallow-buffered Ethernet switches;ICMP signaling method;TCP protocols;Servers;Packet loss;Protocols;Ports (Computers);Probability;Concurrent computing;data center network;TCP;congestion control}, 
+doi={10.1109/ICNP.2015.39}, 
+ISSN={1092-1648}, 
+month={Nov},}
+
+@ARTICLE{Huang_MTUVar_2018, 
+author={J. Huang and Y. Huang and J. Wang and T. He}, 
+journal={IEEE Transactions on Cloud Computing}, 
+title={Adjusting Packet Size to Mitigate TCP Incast in Data Center Networks with COTS Switches}, 
+year={2018}, 
+volume={}, 
+number={}, 
+pages={1-1}, 
+keywords={Data centers;Microsoft Windows;Servers;Protocols;Packet loss;Concurrent computing;Data Center;TCP;switch}, 
+doi={10.1109/TCC.2018.2810870}, 
+ISSN={2168-7161}, 
+month={},}
+
+@INPROCEEDINGS{Zhang_MTU_2011, 
+author={P. Zhang and H. Wang and S. Cheng}, 
+booktitle={2011 Third International Conference on Communications and Mobile Computing}, 
+title={Shrinking MTU to Mitigate TCP Incast Throughput Collapse in Data Center Networks}, 
+year={2011}, 
+volume={}, 
+number={}, 
+pages={126-129}, 
+keywords={local area networks;transport protocols;data center networks;TCP/IP;Ethernet networks;incast throughput collapse;shrinking MTU;cloud computing;Servers;Switches;Throughput;Receivers;Analytical models;Delay;Ethernet networks;Cloud computing;DCN (Data Center Networks);MTU;TCP;Incast}, 
+doi={10.1109/CMC.2011.68}, 
+ISSN={}, 
+month={April},}
+
+@INPROCEEDINGS{Zhang_QCN_2011, 
+author={Y. Zhang and N. Ansari}, 
+booktitle={2011 Proceedings IEEE INFOCOM}, 
+title={On mitigating TCP Incast in Data Center Networks}, 
+year={2011}, 
+volume={}, 
+number={}, 
+pages={51-55}, 
+keywords={telecommunication congestion control;transport protocols;TCP incast;data center network;TCP throughput collapse;link capacity underutilization phenomenon;congestion control algorithm;packet drop;congestion switch;QCN congestion control;fair quantized congestion notification;FQCN;Switches;Throughput;Servers;Bandwidth;Artificial intelligence;Synchronization;Convergence;Data Center Networks (DCN);TCP Incast;TCP throughput collapse;Quantized Congestion Notification (QCN);congestion control;fairness}, 
+doi={10.1109/INFCOM.2011.5935217}, 
+ISSN={0743-166X}, 
+month={April},}
+
+@INPROCEEDINGS{Osada_RTO_2017, 
+author={S. Osada and S. Wakai and Y. Fukushima and T. Yokohira}, 
+booktitle={2017 International Conference on Information and Communication Technology Convergence (ICTC)}, 
+title={Improvement of a TCP incast avoidance method using a fine-grained kernel timer}, 
+year={2017}, 
+volume={}, 
+number={}, 
+pages={147-152}, 
+keywords={computer centres;file servers;network operating systems;transport protocols;fine-grained kernel timer;minimum retransmission timeout;distributed file systems;data centers;TCP incast avoidance method;Servers;Throughput;Degradation;Ports (Computers);Kernel;Standards;TCP;Throughput;Incast;Data Center Networks}, 
+doi={10.1109/ICTC.2017.8190962}, 
+ISSN={}, 
+month={Oct},}
+
+@INPROCEEDINGS{Shpiner_HCF_2010, 
+author={A. Shpiner and I. Keslassy}, 
+booktitle={2010 IEEE 18th International Workshop on Quality of Service (IWQoS)}, 
+title={A switch-based approach to throughput collapse and starvation in data centers}, 
+year={2010}, 
+volume={}, 
+number={}, 
+pages={1-9}, 
+keywords={communication complexity;computer centres;computer networks;cryptography;telecommunication congestion control;telecommunication switching;transport protocols;throughput collapse;starvation;data centers;switch buffers;data center switches;TCP flows;lightweight hash-based algorithm;HCF;hashed credits fair;communication complexity;congested link;queues;Throughput;Switches;Delay;Ethernet networks;Internet;Protocols;Spine;Data communication;Packet switching;Propagation losses}, 
+doi={10.1109/IWQoS.2010.5542737}, 
+ISSN={1548-615X}, 
+month={June},}
+
+@INPROCEEDINGS{Das_TDCTCP_2013, 
+author={T. Das and K. M. Sivalingam}, 
+booktitle={2013 Fifth International Conference on Communication Systems and Networks (COMSNETS)}, 
+title={TCP improvements for data center networks}, 
+year={2013}, 
+volume={}, 
+number={}, 
+pages={1-10}, 
+keywords={computer centres;computer network management;queueing theory;telecommunication congestion control;telecommunication traffic;transport protocols;TCP improvements;data center networks;DCTCP congestion control algorithm;communication network;data flow;control flow;data center traffic;active queue management;AQM;explicit congestion notification;ECN;dynamic delayed ACK timeout calculation;TDCTCP;TCPNewReno;OMNeT++ simulator;queue length;marking threshold;Throughput;Delay;Receivers;Routing protocols;Heuristic algorithms;Bandwidth}, 
+doi={10.1109/COMSNETS.2013.6465539}, 
+ISSN={2155-2487}, 
+month={Jan},}
+
+@INPROCEEDINGS{Zhang_GIP_2013, 
+author={Jiao Zhang and Fengyuan Ren and Li Tang and Chuang Lin}, 
+booktitle={2013 21st IEEE International Conference on Network Protocols (ICNP)}, 
+title={Taming TCP incast throughput collapse in data center networks}, 
+year={2013}, 
+volume={}, 
+number={}, 
+pages={1-10}, 
+keywords={cloud computing;computer centres;discrete event simulation;telecommunication congestion control;transport protocols;TCP incast throughput collapse;data center networks;cloud services;catastrophic performance degradation;timeouts;TO;GIP;guarantee important packets;congestion window reduction;stripe unit;NS-2 platform;incast communication pattern;Receivers;Bandwidth;Switches;Protocols;Throughput;Kernel;Data models;Data Center Networks;TCP incast;Goodput;Initial Window;Redundant Transmission}, 
+doi={10.1109/ICNP.2013.6733609}, 
+ISSN={1092-1648}, 
+month={Oct},}
+
+@inproceedings{Wu_ICTCP_2010,
+ author = {Wu, Haitao and Feng, Zhenqian and Guo, Chuanxiong and Zhang, Yongguang},
+ title = {ICTCP: Incast Congestion Control for TCP in Data Center Networks},
+ booktitle = {Proceedings of the 6th International COnference},
+ series = {Co-NEXT '10},
+ year = {2010},
+ isbn = {978-1-4503-0448-1},
+ location = {Philadelphia, Pennsylvania},
+ pages = {13:1--13:12},
+ articleno = {13},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/1921168.1921186},
+ doi = {10.1145/1921168.1921186},
+ acmid = {1921186},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {TCP, data center networks, incast congestion},
+} 
+
+@ARTICLE{Floyd_RED_1993, 
+author={S. Floyd and V. Jacobson}, 
+journal={IEEE/ACM Transactions on Networking}, 
+title={Random early detection gateways for congestion avoidance}, 
+year={1993}, 
+volume={1}, 
+number={4}, 
+pages={397-413}, 
+keywords={internetworking;network servers;packet switching;protocols;queueing theory;simulations;gateways;congestion avoidance;random early detection;packet-switched networks;average queue size;bandwidth;transport-layer congestion control protocol;TCP;bursty traffic;TCP/IP network;performance;Transport protocols;Delay effects;Throughput;Propagation delay;Bandwidth;TCPIP;Traffic control;High-speed networks;Feedback;Delay estimation}, 
+doi={10.1109/90.251892}, 
+ISSN={1063-6692}, 
+month={Aug},}
+
+@inproceedings{Alizadeh_DCTCP_2010,
+ author = {Alizadeh, Mohammad and Greenberg, Albert and Maltz, David A. and Padhye, Jitendra and Patel, Parveen and Prabhakar, Balaji and Sengupta, Sudipta and Sridharan, Murari},
+ title = {Data Center TCP (DCTCP)},
+ booktitle = {Proceedings of the ACM SIGCOMM 2010 Conference},
+ series = {SIGCOMM '10},
+ year = {2010},
+ isbn = {978-1-4503-0201-2},
+ location = {New Delhi, India},
+ pages = {63--74},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/1851182.1851192},
+ doi = {10.1145/1851182.1851192},
+ acmid = {1851192},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {ECN, TCP, data center network},
+} 
+
+@article{Sargent_Computing_2011,
+  title={Computing TCP's retransmission timer},
+  author={Sargent, Matt and Paxson, Vern and Allman, Mark and Chu, Jerry},
+  journal={Computing},
+  year={2011}
 }
-@article{Cardwell_BBR_2016,
-  author={Cardwell, Neal and Cheng, Yuchung and Gunn, Stephen C and Yeganeh, Soheil and Jacobson, Van},
-  volume={14},
-  file={C:\Users\julia\OneDrive\Documents\ReadCube\2016 - Cardwell - BBR Congestion-based congestion control.pdf},
-  year={2016},
-  title={{BBR:} Congestion-based congestion control}
+
+@INPROCEEDINGS{Kulkarni_Probabilistic_2011, 
+author={S. Kulkarni and P. Agrawal}, 
+booktitle={2011 31st International Conference on Distributed Computing Systems Workshops}, 
+title={A Probabilistic Approach to Address TCP Incast in Data Center Networks}, 
+year={2011}, 
+volume={}, 
+number={}, 
+pages={26-33}, 
+keywords={computer centres;local area networks;probability;transport protocols;probabilistic approach;TCP incast;data center networks;servers;Ethernet;baseline communication fabric;IEEE 802.3 standards;TCP/IP processing;Servers;Throughput;Synchronization;Bandwidth;Protocols;Receivers;IP networks;TCP;Incast;Throughput Collapse;Data Center;Ethernet;Low latency;High speed}, 
+doi={10.1109/ICDCSW.2011.41}, 
+ISSN={2332-5666}, 
+month={June},}
+
+@INPROCEEDINGS{Zheng_ExpBackoff_2011, 
+author={H. Zheng and C. Chen and C. Qiao}, 
+booktitle={2011 Third International Conference on Communications and Mobile Computing}, 
+title={Understanding the Impact of Removing TCP Binary Exponential Backoff in Data Centers}, 
+year={2011}, 
+volume={}, 
+number={}, 
+pages={174-177}, 
+keywords={client-server systems;computer centres;transport protocols;binary exponential backoff algorithm;data center;TCP timeout;incast collapse;Throughput;Servers;Algorithm design and analysis;Switches;Bandwidth;Data models;Context;Data center;TCP;Binary exponential backoff;incast collapse;throughput}, 
+doi={10.1109/CMC.2011.85}, 
+ISSN={}, 
+month={April},}
+
+@inproceedings{Vasudevan_FineGradinedRetrans_2009,
+ author = {Vasudevan, Vijay and Phanishayee, Amar and Shah, Hiral and Krevat, Elie and Andersen, David G. and Ganger, Gregory R. and Gibson, Garth A. and Mueller, Brian},
+ title = {Safe and Effective Fine-grained TCP Retransmissions for Datacenter Communication},
+ booktitle = {Proceedings of the ACM SIGCOMM 2009 Conference on Data Communication},
+ series = {SIGCOMM '09},
+ year = {2009},
+ isbn = {978-1-60558-594-9},
+ location = {Barcelona, Spain},
+ pages = {303--314},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/1592568.1592604},
+ doi = {10.1145/1592568.1592604},
+ acmid = {1592604},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {datacenter networks, incast, performance, throughput},
+} 
+
+@INPROCEEDINGS{Chen_BlockSizeExpV2_2012, 
+author={K. Chen and H. Zheng and Y. Zhao and Y. Guo}, 
+booktitle={2012 International Conference on Cyber-Enabled Distributed Computing and Knowledge Discovery}, 
+title={Improved Solution to TCP Incast Problem in Data Center Networks}, 
+year={2012}, 
+volume={}, 
+number={}, 
+pages={427-434}, 
+keywords={computer centres;transport protocols;TCP incast problem;data center networks;packet losses;concurrent senders;Distributed computing;data center networks;TCP;Incast throughput collapse;congestion control}, 
+doi={10.1109/CyberC.2012.78}, 
+ISSN={}, 
+month={Oct},}
+
+@INPROCEEDINGS{Zheng_BlockSizeExp_2011, 
+author={H. Zheng and C. Qiao}, 
+booktitle={2011 IEEE Global Telecommunications Conference - GLOBECOM 2011}, 
+title={An Effective Approach to Preventing TCP Incast Throughput Collapse for Data Center Networks}, 
+year={2011}, 
+volume={}, 
+number={}, 
+pages={1-6}, 
+keywords={computer centres;computer networks;transport protocols;TCP incast throughput collapse;data center networks;link bandwidth;packet loss;bandwidth delay product;TCP protocol;Servers;Receivers;Throughput;Bandwidth;Rabbits;Delay;Mice}, 
+doi={10.1109/GLOCOM.2011.6133681}, 
+ISSN={1930-529X}, 
+month={Dec},}
+
+@INPROCEEDINGS{Ke_SchedulingDataRequests_2012, 
+author={Dou Ke and Ren Yongmao and Li Jun}, 
+booktitle={2012 Fourth International Conference on Multimedia Information Networking and Security}, 
+title={Avoiding TCP Incast through Scheduling Data Requests}, 
+year={2012}, 
+volume={}, 
+number={}, 
+pages={453-457}, 
+doi={10.1109/MINES.2012.79}, 
+ISSN={2162-8998}, 
+month={Nov},}
+
+@inproceedings{Krevat_ApplicationLevelApproaches_2007,
+ author = {Krevat, Elie and Vasudevan, Vijay and Phanishayee, Amar and Andersen, David G. and Ganger, Gregory R. and Gibson, Garth A. and Seshan, Srinivasan},
+ title = {On Application-level Approaches to Avoiding TCP Throughput Collapse in Cluster-based Storage Systems},
+ booktitle = {Proceedings of the 2Nd International Workshop on Petascale Data Storage: Held in Conjunction with Supercomputing '07},
+ series = {PDSW '07},
+ year = {2007},
+ isbn = {978-1-59593-899-2},
+ location = {Reno, Nevada},
+ pages = {1--4},
+ numpages = {4},
+ url = {http://doi.acm.org/10.1145/1374596.1374598},
+ doi = {10.1145/1374596.1374598},
+ acmid = {1374598},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Incast, TCP, cluster-based storage},
+} 
+
+
+@INPROCEEDINGS{Podlesny_ApplicationLevelScheduling_2012, 
+author={M. Podlesny and C. Williamson}, 
+booktitle={2012 IEEE 20th International Symposium on Modeling, Analysis and Simulation of Computer and Telecommunication Systems}, 
+title={Solving the TCP-Incast Problem with Application-Level Scheduling}, 
+year={2012}, 
+volume={}, 
+number={}, 
+pages={99-106}, 
+keywords={computer centres;data communication;Internet;scheduling;transport protocols;TCP-incast problem;application-level scheduling;data center networks;high link speeds;low propagation delays;small switch buffers;clustered arrivals;TCP flows;data transfer requests;TCP retransmission timeouts;lossless data transmission;Servers;Switches;Mathematical model;Equations;Data models;Internet;Delay;performance modeling;TCP-incast;data center}, 
+doi={10.1109/MASCOTS.2012.21}, 
+ISSN={2375-0227}, 
+month={Aug},}
+
+@article{Padhye_TCP_Throughput_1998,
+ author = {Padhye, Jitendra and Firoiu, Victor and Towsley, Don and Kurose, Jim},
+ title = {Modeling TCP Throughput: A Simple Model and Its Empirical Validation},
+ journal = {SIGCOMM Comput. Commun. Rev.},
+ issue_date = {Oct. 1998},
+ volume = {28},
+ number = {4},
+ month = oct,
+ year = {1998},
+ issn = {0146-4833},
+ pages = {303--314},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/285243.285291},
+ doi = {10.1145/285243.285291},
+ acmid = {285291},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+
+@inproceedings {Prakash_Outcast_2012,
+author = {Pawan Prakash and Advait Dixit and Y. Charlie Hu and Ramana Kompella},
+title = {The {TCP} Outcast Problem: Exposing Unfairness in Data Center Networks},
+booktitle = {9th {USENIX} Symposium on Networked Systems Design and Implementation ({NSDI} 12)},
+year = {2012},
+isbn = {978-931971-92-8},
+address = {San Jose, CA},
+pages = {413--426},
+url = {https://www.usenix.org/conference/nsdi12/technical-sessions/presentation/prakash},
+publisher = {{USENIX}},
 }
+
+@article{Qin_TCP_2016,
+ author = {Qin, Yang and Yang, Weihong and Ye, Yibin and Shi, Yao},
+ title = {Analysis for TCP in Data Center Networks},
+ journal = {J. Netw. Comput. Appl.},
+ issue_date = {June 2016},
+ volume = {68},
+ number = {C},
+ month = jun,
+ year = {2016},
+ issn = {1084-8045},
+ pages = {140--150},
+ numpages = {11},
+ url = {http://dx.doi.org/10.1016/j.jnca.2016.04.014},
+ doi = {10.1016/j.jnca.2016.04.014},
+ acmid = {2950680},
+ publisher = {Academic Press Ltd.},
+ address = {London, UK, UK},
+ keywords = {Congestion window, Data center networks, Incast, Outcast},
+} 
+
+@inproceedings{Phanishayee_Throughput_2008,
+ author = {Phanishayee, Amar and Krevat, Elie and Vasudevan, Vijay and Andersen, David G. and Ganger, Gregory R. and Gibson, Garth A. and Seshan, Srinivasan},
+ title = {Measurement and Analysis of TCP Throughput Collapse in Cluster-based Storage Systems},
+ booktitle = {Proceedings of the 6th USENIX Conference on File and Storage Technologies},
+ series = {FAST'08},
+ year = {2008},
+ location = {San Jose, California},
+ pages = {12:1--12:14},
+ articleno = {12},
+ numpages = {14},
+ url = {http://dl.acm.org/citation.cfm?id=1364813.1364825},
+ acmid = {1364825},
+ publisher = {USENIX Association},
+ address = {Berkeley, CA, USA},
+} 
+
+@inproceedings{Nagle_Panasas_2004,
+ author = {Nagle, David and Serenyi, Denis and Matthews, Abbie},
+ title = {The Panasas ActiveScale Storage Cluster: Delivering Scalable High Bandwidth Storage},
+ booktitle = {Proceedings of the 2004 ACM/IEEE Conference on Supercomputing},
+ series = {SC '04},
+ year = {2004},
+ isbn = {0-7695-2153-3},
+ pages = {53--},
+ url = {https://doi.org/10.1109/SC.2004.57},
+ doi = {10.1109/SC.2004.57},
+ acmid = {1049998},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+} 
+
+@inproceedings{Dean_MapReduce_2004,
+title	= {MapReduce: Simplified Data Processing on Large Clusters},
+author	= {Jeffrey Dean and Sanjay Ghemawat},
+year	= {2004},
+booktitle	= {OSDI'04: Sixth Symposium on Operating System Design and Implementation},
+pages	= {137--150},
+address	= {San Francisco, CA}
+}
+
+@INPROCEEDINGS{Shvachko_HDFS_2010, 
+author={K. Shvachko and H. Kuang and S. Radia and R. Chansler}, 
+booktitle={2010 IEEE 26th Symposium on Mass Storage Systems and Technologies (MSST)}, 
+title={The Hadoop Distributed File System}, 
+year={2010}, 
+volume={}, 
+number={}, 
+pages={1-10}, 
+keywords={distributed databases;Internet;network operating systems;Hadoop distributed file system;data stream;data storage;enterprise data;Yahoo!;File systems;Bandwidth;Concurrent computing;Distributed computing;Computer architecture;File servers;Facebook;Protocols;Protection;Clustering algorithms;Hadoop;HDFS;distributed file system}, 
+doi={10.1109/MSST.2010.5496972}, 
+ISSN={2160-195X}, 
+month={May},}
+
+@inproceedings{Chen_Understanding_2009,
+ author = {Chen, Yanpei and Griffith, Rean and Liu, Junda and Katz, Randy H. and Joseph, Anthony D.},
+ title = {Understanding TCP Incast Throughput Collapse in Datacenter Networks},
+ booktitle = {Proceedings of the 1st ACM Workshop on Research on Enterprise Networking},
+ series = {WREN '09},
+ year = {2009},
+ isbn = {978-1-60558-443-0},
+ location = {Barcelona, Spain},
+ pages = {73--82},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1592681.1592693},
+ doi = {10.1145/1592681.1592693},
+ acmid = {1592693},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {TCP, incast, throughput collapse, unix},
+}
+
+@INPROCEEDINGS{Chen_Comprehensive_2015, 
+    author={W. Chen and F. Ren and J. Xie and C. Lin and K. Yin and F. Baker}, 
+    booktitle={2015 IEEE Conference on Computer Communications (INFOCOM)}, 
+    title={Comprehensive understanding of TCP Incast problem}, 
+    year={2015}, 
+    volume={}, 
+    number={}, 
+    pages={1688-1696}, 
+    keywords={transport protocols;TCP incast problem;catastrophic problem;data center applications;protocol version;empirical observations;Incast traffic pattern;Throughput;Analytical models;Data models;Gaussian distribution;Receivers;Conferences;Computers;TCP Incast;Modeling;Timeout;Window Size Distribution;Solutions}, 
+    doi={10.1109/INFOCOM.2015.7218549}, 
+    ISSN={0743-166X}, 
+    month={April},
+}
+
 @article{Sreekumari_Transport_2016,
   issn={{1387-974X}},
   author={Sreekumari, Prasanthi and Jung, Jae-il},
@@ -18,18 +429,11 @@
   volume={31},
   number={1},
   doi={10.1007/s11107-015-0550-y},
-  file={C:\Users\julia\OneDrive\Documents\ReadCube\2016 - Sreekumari - Transport protocols for data center networks a survey of issues, solutions and challenges.pdf},
   journal={Photonic Netw Commun},
   year={2016},
-  abstract={In recent years, data centers play an important role in academia and industry for supporting various services and applications. Compared with other {IP} networks, data center networks have some special features such as many-to-one communication pattern with high bandwidth, low latency, auto-scaling, shallow buffered switches and multi-rooted tree topology. Owing to these special features of data center networks, traditional {TCP} suffers from severe performance degradation. For improving the performance of {TCP} in data center networks, various solutions have been proposed in recent years. This article presents a comprehensive survey of existing transport layer solutions proposed for mitigating the problems of {TCP} in data center networks. The objective of this article is threefold: to discuss about the issues of {TCP} in data center networks; to introduce various transport layer solutions and finally to compare and discuss the challenges of existing solutions proposed for improving the performance of {TCP} in data center networks.},
   title={Transport protocols for data center networks: a survey of issues, solutions and challenges}
 }
-@article{Hock_Experimental_2017,
-  author={Hock, Mario and Bless, Roland and Zitterbart, Martina},
-  file={C:\Users\julia\OneDrive\Documents\ReadCube\2017 - Hock - Experimental evaluation of BBR congestion control.pdf},
-  year={2017},
-  title={Experimental evaluation of {BBR} congestion control}
-}
+
 @article{Ren_A_2014,
   issn={1099-1131},
   author={Ren, Yongmao and Zhao, Yu and Liu, Pei and Dou, Ke and Li, Jun},
@@ -40,25 +444,14 @@
   file={C:\Users\julia\OneDrive\Documents\ReadCube\2014 - Ren - A survey on TCP Incast in data center networks.pdf},
   journal={Int J Commun Syst},
   year={2014},
-  abstract={In high bandwidth, low latency data center networks, when multiple data senders simultaneously communicate with a single receiver, namely in many-to-one communication pattern, the burst data overload the receiver's switch buffers, which leads to Transmission Control Protocol {(TCP)} throughput collapse. This is the so-called {TCP} Incast problem. It has become a new hot research topic in recent years. Also, many proposals have been put forward from the aspects of multiple layers including link layer, transport layer, and application layer, etc., to mitigate {TCP} Incast. In this paper, an in-depth survey on these proposals is given, and the principles, merits, and drawbacks of the main proposals for solving the {TCP} Incast issue are analyzed and summarized. Copyright {\textcopyright} 2012 John Wiley \& Sons, Ltd.},
   title={A survey on {TCP} Incast in data center networks}
 }
-@article{Chen_Comprehensive_2015,
-  author={Chen, Wen and Ren, Fengyuan and Xie, Jing and Lin, Chuang and Yin, Kevin and Baker, Fred},
-  file={C:\Users\julia\OneDrive\Documents\ReadCube\2015 - Chen - Comprehensive understanding of TCP Incast problem.pdf},
-  year={2015},
-  title={Comprehensive understanding of {TCP} Incast problem}
-}
-@article{Qin_Analysis_2016,
-  author={Qin, Yang and Yang, Weihong and Ye, Yibin and Shi, Yao},
-  volume={68},
-  file={C:\Users\julia\OneDrive\Documents\ReadCube\2016 - Qin - Analysis for TCP in data center networks Outcast and incast.pdf},
-  year={2016},
-  title={Analysis for {TCP} in data center networks: Outcast and incast}
-}
-@article{Benson_Network_2010,
+
+@inproceedings{Benson_Network_2010,
+  title={Network traffic characteristics of data centers in the wild},
   author={Benson, Theophilus and Akella, Aditya and Maltz, David A},
-  file={C:\Users\julia\OneDrive\Documents\ReadCube\Benson et al-2010-Proceedings of the 10th ACM SIGCOMM conference on Internet measurement.pdf},
+  booktitle={Proceedings of the 10th ACM SIGCOMM conference on Internet measurement},
+  pages={267--280},
   year={2010},
-  title={Network traffic characteristics of data centers in the wild}
+  organization={ACM}
 }
